fix navbar on smaller desktop screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@ nav {
   .left-section {
     display: flex;
     align-items: center;
-    width: 400px;
+    width: 25%;
     ul {
       list-style-type: none;
       display: flex;
@@ -79,7 +79,7 @@ nav {
   .right-section {
     display: flex;
     justify-content: flex-end;
-    width: 400px;
+    width: 25%;
     .dropdown-item {
       height: 40px !important;
       display: flex;
